<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".old_version.profile.LoginProfileFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_vertical"
        android:text="@string/login_enter"
        android:textColor="@color/colorText"
        android:textSize="36sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle" />

    <androidx.cardview.widget.CardView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="12dp"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:src="@drawable/yelm_media" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/login_enter_phone_number"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle" />

    <androidx.cardview.widget.CardView
        style="@style/CardViewCustomStyle"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">

        <EditText
            android:id="@+id/phoneNumber"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/login_phone_number"
            android:inputType="phone"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textColorHint="#A8A7A7"
            android:theme="@style/ProDisplayTextStyle" />
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/sendCode"
        style="@style/CustomTextPayButton"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="100dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="100dp"
        android:background="@drawable/background_toggle_buttons"
        android:fontFamily="@font/zmiin_phh3l"
        android:text="@string/login_send"
        android:textAllCaps="false"
        android:textColor="#DEFFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:backgroundTint="@color/colorYelmMediaDark" />

    <LinearLayout
        android:id="@+id/layoutLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/login_sms_code"
            android:textColor="@color/colorText"
            android:textSize="18sp"
            android:textStyle="bold"
            android:theme="@style/ProDisplayTextStyle" />

        <androidx.cardview.widget.CardView
            style="@style/CardViewCustomStyle"
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:hint="@string/login_code"
                android:inputType="number"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColorHint="#A8A7A7"
                android:theme="@style/ProDisplayTextStyle" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/repeatCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/login_repeat_code"
            android:textColor="@color/colorYelmMediaDark"
            android:textSize="16sp"
            android:textStyle="bold"
            android:theme="@style/ProDisplayTextStyle"
            android:focusable="true" />

        <Button
            android:id="@+id/login"
            style="@style/CustomTextPayButton"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="100dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/background_toggle_buttons"
            android:fontFamily="@font/zmiin_phh3l"
            android:text="@string/login_enter"
            android:textAllCaps="false"
            android:textColor="#DEFFFFFF"
            android:textSize="18sp"
            android:textStyle="bold"
            app:backgroundTint="@color/colorYelmMediaDark" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp" />


</LinearLayout>