<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".old_version.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/yelm_app"
            android:textColor="@color/colorText"
            android:textSize="36sp"
            android:textStyle="bold"
            android:theme="@style/ProDisplayTextStyle" />

    </LinearLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/profile_subscription_action"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle" />

    <androidx.cardview.widget.CardView
        android:id="@+id/progressSubscriptionAction"
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:elevation="4dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:progress="0"
                android:progressDrawable="@drawable/progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:includeFontPadding="false"
                android:inputType="text"
                android:text="@string/profile_days"
                android:textAllCaps="false"
                android:textColor="#DEFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/ProDisplayTextStyle"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/profile_control"
        android:textColor="@color/colorText"
        android:textSize="18sp"
        android:textStyle="bold"
        android:theme="@style/ProDisplayTextStyle" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        app:columnCount="2"
        app:rowCount="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/pushCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="1">

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/push_frame"
                android:gravity="center"
                android:text="@string/profile_push"
                android:textColor="#DEFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/ProDisplayTextStyle" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/settingsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="1">

            <TextView
                android:id="@+id/textView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/settings_frame"
                android:gravity="center"
                android:text="@string/profile_settings"
                android:textColor="#DEFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/ProDisplayTextStyle" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/statisticsCard"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="#FFFFFF"
            app:cardCornerRadius="8dp"
            app:layout_columnWeight="1">

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/statistics_frame"
                android:gravity="center"
                android:text="@string/profile_statistics"
                android:textColor="#DEFFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                android:theme="@style/ProDisplayTextStyle" />
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="60dp" />


</LinearLayout>


